--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <h1>Ceasar Cipher<h1>
+      <input type="text" id="in" placeholder="Enter word to Encrypt">
+      <button id="encrypt">Encrypt</button>
+      <button id="decrypt">Decrypt</button>
+      <p id="out">Output gose here...</p>
     <script src="script.js"></script>
   </body>
 </html>
